# Drawpile

./: .clang-format  .clang-tidy  .clangd  .envrc  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  Cargo.toml  ChangeLog  Config.cmake.in  Doxyfile  INSTALL  LICENSE-FOR-ORIGINAL-CODE  Macros.cmake  Optimize.cmake  README.md  RELEASENOTES.txt  config.h.cmake  flake.nix  installer.nsi  installer.ubuntu.sh  release.sh  shell.nix  update-appdata-releases.py  youre-in-the-wrong-branch.txt
appdrawdance/: CMakeLists.txt
appdrawdance/drawdance/: app.c  app.h  canvas_renderer.c  canvas_renderer.h  gl.c  gl.h  main.c  ui.c  ui.h
appdrawdance/drawdance_lua/: canvas_state.c  client.c  imgui.cpp  lua_bindings.c  lua_bindings.h  message.c  ui.c
appdrawdance/drawdance_web/: .env  attribution.txt  package-lock.json  package.json
appdrawdance/lua/: app.lua  class.lua  licenses.lua  translations.lua  view.lua
desktop/: CMakeLists.txt  drawpile-srv.service  drawpile-srv.socket  drawpile.appdata.xml  drawpile.desktop  drawpile.icns  drawpile.iss  drawpile.xml  krita-colors-to-drawpile.py  kritabright.colors  kritadark.colors  kritadarker.colors  net.drawpile.drawpile.appdata.xml  net.drawpile.drawpile.desktop  nightmode.colors  update-appdata-releases.py  update_icns.sh
desktop/artifacts/: .gitignore  upload.sh
desktop/palettes/: Grayscale.gpl  Ponies.gpl  Tango.gpl
desktop/sounds/: sounds.txt
desktop/theme/: icons.txt
doc/: CMakeLists.txt  changes-from-drawpile.md  drawpile-srv.1  drawpile-srv.8  drawpile.docbook  example.dptpl.txt  logins.md  messages.md  openraster.txt  protocol.md  protocol.txt  server-api.md  servers.1.0.0.schema.json  textloader.md  textloader.txt
doc/dox/: doxygen.dox  protocol.dox  protocol.flow.dox
generators/: CMakeLists.txt  generate_conversions.c  qt_premul_factors.cpp
generators/imgui_bindings_generator/: generate_imgui_bindings  generator.pl  header.cpp  overloads.pl
generators/protogen/: messages.c.jinja  messages.h.jinja  protocol.yaml  protogen_drawdance.py
libclient/: CMakeLists.txt
libclient/dpclient/: client.c  client.h  client_internal.h  document.c  ext_auth.c  tcp_socket_client.c  tcp_socket_client.h  web_socket_client.c  web_socket_client.h
libcommon/: CMakeLists.txt
libcommon/dpcommon/: atomic.c  atomic.h  base64.c  base64.h  binary.c  binary.h  common.c  common.h  cpu.c  cpu.h  endianness.h  event_log.c  file.c  geom.h  input.c  input.h  output.c  output.h  output_qt.cpp  output_qt.h  perf.c  perf.h  queue.c  queue.h  threading.c  threading.h  threading_common.c  threading_pthread.c  threading_qt.cpp  threading_sdl.c  threading_win32.c  vector.c  vector.h  worker.c  worker.h
libcommon/test/: base64_encode.c  file.c  queue.c  rect.c
libengine/: CMakeLists.txt
libengine/benchmark/: 15to8_simd_bench.cpp  bench_common.hpp  blending_mask_simd_bench.cpp  blending_simd_bench.cpp
libengine/dpengine/: affected_area.c  affected_area.h  annotation.c  annotation.h  annotation_list.c  annotation_list.h  blend_mode.c  blend_mode.h  brush.c  brush.h  brush_engine.c  brush_engine.h  brush_preview.c  brush_preview.h  canvas_diff.c  canvas_diff.h  canvas_history.c  canvas_history.h  canvas_state.c  canvas_state.h  compress.c  compress.h  document_metadata.c  document_metadata.h  draw_context.c  draw_context.h  dump_reader.c  dump_reader.h  flood_fill.c  flood_fill.h  frame.c  frame.h  image.c  image.h  image_jpeg.c  image_jpeg.h  image_png.c  image_png.h  image_transform.c  layer.c  (+43 more)
libengine/test/: handle_annotations.c  handle_common.h  handle_layers.c  handle_metadata.c  handle_timeline.c  image_thumbnail.c  model_changes.c  read_write_image.c  render_recording.c  replay_dump.c  resize_image.c  resize_image.h
libmsg/: CMakeLists.txt
libmsg/dpmsg/: access_tier.c  access_tier.h  acl.c  acl.h  binary_reader.c  binary_reader.h  binary_writer.h  blend_mode.c  blend_mode.h  message.c  message.h  message_queue.c  message_queue.h  messages.c  messages.h  msg_internal.c  msg_internal.h  text_reader.c  text_reader.h  text_writer.c  text_writer.h
libmsg/test/: read_write_roundtrip.c
src/: CMakeLists.txt  README.md  config.h.cmake  config.h.in  drawpile.pro  protocol.yaml
src/client/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  annotationitem.cpp  annotationitem.h  board.cpp  board.h  boardeditor.cpp  boardeditor.h  boarditem.cpp  boarditem.h  brush.cpp  brush.h  brushpreview.cpp  brushpreview.h  brushslider.cpp  brushslider.h  canvasitem.cpp  canvasitem.h  canvasscene.cpp  canvasscene.h  canvasview.cpp  canvasview.h  chatwidget.cpp  chatwidget.h  client.pro  client.rc  colorbox.cpp  colorbox.h  colorbutton.cpp  colorbutton.h  colordialog.cpp  colordialog.h  colortriangle.cpp  colortriangle.h  controller.cpp  controller.h  document.cpp  document.h  dualcolorbutton.cpp  (+103 more)
src/cmake-config/: CMakeLists.txt  config.cpp.in  config.h.in
src/desktop/: AndroidManifest.xml.in  AndroidManifest.xml.qt5  AndroidManifest.xml.qt6  CMakeLists.txt  DrawpileInfo.plist.in  appdata.xml  drawpile.appdata.xml  drawpile.desktop.in  drawpile.exe.manifest.in  drawpile.rc.in  filewrangler.cpp  filewrangler.h  generate-mypaint-strings.py  inputpresetmodel.cpp  inputpresetmodel.h  krita-colors-to-drawpile.py  main.cpp  main.h  mainwindow.cpp  mainwindow.h  net.drawpile.drawpile.appdata.xml  notifications.cpp  notifications.h  scaling.cpp  scaling.h  settings.cpp  settings.h  settings_table.h  tabletinput.cpp  tabletinput.h  update-assets-icons.sh
src/dpcore/: Cargo.toml
src/dpimpex/: Cargo.toml
src/dpmypaint/: Cargo.toml  bindgen.sh  bindings.h  build.rs
src/drawdance/: .clang-format  CMakeLists.txt  protogen
src/drawpile-bouncer/: main.cpp
src/drawpile-cli/: Cargo.toml
src/libclient/: CMakeLists.txt  document.cpp  document.h  parse-emoji.py  settings.cpp  settings.h  settings_table.h  settings_table_macros.h  wasmsupport.cpp  wasmsupport.h
src/libserver/: CMakeLists.txt  announcable.h  announcements.cpp  announcements.h  client.cpp  client.h  (+35 more)
test/: CMakeLists.txt
(+3638 files in other folders)
