[workspace]
resolver = "2"
members = [
    "src/drawdance/rust",
    "src/drawdance/libmsg",
    "src/tools/dprectool",
]

[workspace.package]
version = "2.2.0-pre"
publish = false
edition = "2021"
license = "GPL-3.0-or-later"

[profile.relwithdebinfo]
inherits = "release"
debug = true

[profile.minsizerel]
inherits = "release"
opt-level = "s"
